# open-gl

./: .gitignore  CMakeLists.txt
src/: main.cpp
